--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gibme/tcp-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Lazy wrapper for TCP server(s)",
   "main": "dist/tcp-server.js",
   "types": "dist/tcp-server.d.ts",
@@ -9,10 +9,14 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "test": "yarn style",
-    "style": "./node_modules/.bin/eslint src/**/*.ts",
-    "fix-style": "./node_modules/.bin/eslint --fix src/**/*.ts",
+    "build": "yarn build:typescript",
+    "build:docs": "./node_modules/.bin/typedoc",
+    "build:typescript": "./node_modules/.bin/tsc",
+    "test": "yarn test:style && yarn test:mocha",
+    "test:style": "yarn style",
+    "test:mocha": "./node_modules/.bin/mocha --exit --timeout 30000 --require ts-node/register test/test.ts",
+    "style": "./node_modules/.bin/eslint src/**/*.ts test/**/*.ts",
+    "fix-style": "./node_modules/.bin/eslint --fix src/**/*.ts test/**/*.ts",
     "fix:style": "yarn fix-style",
     "prepublishOnly": "yarn build"
   },
@@ -23,6 +27,7 @@
   "bugs": {
     "url": "https://github.com/gibme-npm/tcp-server/issues"
   },
+  "homepage": "https://gibme-npm.github.io/tcp-server/",
   "engines": {
     "node": ">=16"
   },
@@ -33,6 +38,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -42,7 +48,9 @@
     "eslint-plugin-n": "^15.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.1.0",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.21",
     "typescript": "^4.8.4"
   }
 }
