--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@gibme/tcp-server",
-  "version": "1.0.11",
+  "version": "1.0.14",
   "description": "Lazy wrapper for TCP server(s)",
-  "main": "dist/tcp-server.js",
-  "types": "dist/tcp-server.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/*"
   ],
@@ -30,7 +30,7 @@
   },
   "homepage": "https://gibme-npm.github.io/tcp-server/",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "engineStrict": true,
   "author": {
@@ -40,7 +40,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.7",
+    "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
@@ -51,7 +51,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.25.7",
-    "typescript": "^5.3.3"
+    "typedoc": "^0.28.4",
+    "typescript": "^5.8.3"
   }
 }
